tests/samples/positive/types/layout_alignment.ax
module layout_alignment;

struct Padded {
    tag: u8;
    value: u64;
}

struct PackedBytes {
    data: [3]u8;
}

enum Tag: u16 {
    zero = 0,
    one = 1,
}

enum Payload: u8 {
    small(u8) = 1,
    wide(u64) = 2,
    empty = 3,
}

fn main() -> i32 {
    if sizeof<Padded>() != ((16) as usize) {
        return 1;
    }
    if alignof<Padded>() != ((8) as usize) {
        return 2;
    }
    if sizeof<PackedBytes>() != ((3) as usize) {
        return 3;
    }
    if alignof<PackedBytes>() != ((1) as usize) {
        return 4;
    }
    if sizeof<Tag>() != ((2) as usize) {
        return 5;
    }
    if alignof<Tag>() != ((2) as usize) {
        return 6;
    }
    if sizeof<Payload>() != ((16) as usize) {
        return 7;
    }
    if alignof<Payload>() != ((8) as usize) {
        return 8;
    }
    return 0;
}
