tests/samples/negative/types/type_alias_duplicate.ax
module type_alias_duplicate;

type Handle = i32;
struct Handle {
    value: i32;
}

fn main() -> i32 {
    return 0;
}
